backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/Hyrto_Booking__c.object-meta.xml
<CustomObject>
 <label>Hyrto Booking</label>
 <pluralLabel>Hyrto Bookings</pluralLabel>
 <nameField>
  <label>Name</label>
  <type>Text</type>
 </nameField>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>