backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/Asset__c.field-meta.xml
<CustomField>
 <fullName>Asset__c</fullName><label>Asset</label><type>Lookup</type>
 <referenceTo>Asset</referenceTo>
 <relationshipLabel>Bookings</relationshipLabel>
 <relationshipName>Hyrto_Bookings</relationshipName>
</CustomField>