backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/BasePrice__c.field-meta.xml
<CustomField>
 <fullName>BasePrice__c</fullName><label>Base Price</label><type>Currency</type>
 <precision>18</precision><scale>2</scale>
</CustomField>