backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/CustomerEmail__c.field-meta.xml
<CustomField>
 <fullName>CustomerEmail__c</fullName><label>Customer Email</label><type>Email</type>
</CustomField>