backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/CustomerName__c.field-meta.xml
<CustomField>
 <fullName>CustomerName__c</fullName><label>Customer Name</label><type>Text</type><length>255</length>
</CustomField>