backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/CustomerPhone__c.field-meta.xml
<CustomField>
 <fullName>CustomerPhone__c</fullName><label>Customer Phone</label><type>Phone</type>
</CustomField>