backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/CustomerPostalCode__c.field-meta.xml
<CustomField>
 <fullName>CustomerPostalCode__c</fullName><label>Customer Postal Code</label><type>Text</type><length>10</length>
</CustomField>