backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/DeliveryAddress__c.field-meta.xml
<CustomField>
 <fullName>DeliveryAddress__c</fullName><label>Delivery Address</label><type>Text</type><length>255</length>
</CustomField>