backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/DeliveryFee__c.field-meta.xml
<CustomField>
 <fullName>DeliveryFee__c</fullName><label>Delivery Fee</label><type>Currency</type>
 <precision>18</precision><scale>2</scale>
</CustomField>