backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/DeliveryNotes__c.field-meta.xml
<CustomField>
 <fullName>DeliveryNotes__c</fullName><label>Delivery Notes</label><type>TextArea</type>
</CustomField>