backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/DistanceKm__c.field-meta.xml
<CustomField>
 <fullName>DistanceKm__c</fullName><label>Distance (km)</label><type>Number</type>
 <precision>5</precision><scale>1</scale>
</CustomField>