backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/EndDateTime__c.field-meta.xml
<CustomField>
 <fullName>EndDateTime__c</fullName><label>End Date Time</label><type>DateTime</type>
</CustomField>