backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/Hub__c.field-meta.xml
<CustomField>
 <fullName>Hub__c</fullName><label>Hub</label><type>Lookup</type>
 <referenceTo>Hyrto_Hub__c</referenceTo>
 <relationshipLabel>Bookings</relationshipLabel>
 <relationshipName>Bookings</relationshipName>
</CustomField>