backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/IncludesCleaning__c.field-meta.xml
<CustomField>
    <fullName>IncludesCleaning__c</fullName>
    <label>Städservice inkl.</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>