backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/IncludesWaterRefill__c.field-meta.xml
<CustomField>
    <fullName>IncludesWaterRefill__c</fullName>
    <label>Vattenpåfyllning inkl.</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>