backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/ServiceIntervalHours__c.field-meta.xml
<CustomField>
    <fullName>ServiceIntervalHours__c</fullName>
    <label>Service intervall (tim)</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>