backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/ServiceLevel__c.field-meta.xml
<CustomField>
    <fullName>ServiceLevel__c</fullName>
    <label>Service nivå</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Bas</fullName><default>false</default><label>Bas</label></value>
            <value><fullName>Standard</fullName><default>true</default><label>Standard</label></value>
            <value><fullName>Premium</fullName><default>false</default><label>Premium</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>