backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
 <fullName>StartDateTime__c</fullName><label>Start Date Time</label><type>DateTime</type>
</CustomField>