backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Bokad</fullName><default>false</default><label>Bokad</label></value>
            <value><fullName>Bekräftad</fullName><default>false</default><label>Bekräftad</label></value>
            <value><fullName>Utleverans</fullName><default>false</default><label>Utleverans</label></value>
            <value><fullName>Levererad</fullName><default>false</default><label>Levererad</label></value>
            <value><fullName>Inleverans</fullName><default>false</default><label>Inleverans</label></value>
            <value><fullName>Tvätt genomsättning</fullName><default>false</default><label>Tvätt/genomgång</label></value>
            <value><fullName>Avslutad</fullName><default>false</default><label>Avslutad</label></value>
            <value><fullName>Avbokad</fullName><default>false</default><label>Avbokad</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>