backend/hyrto-schema/force-app/main/default/objects/Hyrto_Booking__c/fields/TotalPrice__c.field-meta.xml
<CustomField>
 <fullName>TotalPrice__c</fullName><label>Total Price</label><type>Currency</type>
 <precision>18</precision><scale>2</scale>
</CustomField>